# sentinel-trading-platform

./: .commitlintrc.json  .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  .vercelignore  .zizmor.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTAINER_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  DOCKER_OPTIMIZATIONS.md  ENV_SETUP.md  IMPLEMENTATION_ROADMAP.md  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  WORKLOG.md  deep-research-report 04.02.md  deep-research-report 2.md  deep-research-report 3.md  deep-research-report 4.md  deep-research-report.md  docker-compose.yml  lighthouserc.js  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  turbo.json  vercel.json
apps/engine/: .dockerignore  Dockerfile  OPTIMIZATION_NOTES.md  README.md  gunicorn_conf.py  pyproject.toml  railway.toml  requirements.txt  start.sh
apps/engine/.hypothesis/constants/: 08b55c9c73b0c45e  0fe08da3809b2b77  10771bd1c7b83deb  1188e53c81362eac  11a7c64d53ddf595  14027a10244a3ef3  18d374c58dd040a3  229d50746edc6acb  25126e0f2032f6bf  26d3f23f57de3260  49093a427e87222f  61c6746a3c099a54  699714b12a1f7a6e  6bdbb63030a35486  77164f8ce15dfd45  7babd40bcd1bc3e9  7c69b7c964ce7700  8af6fb3b7f049a8c  93207413896bb178  a1c55fe0e589c29c  a2b1ab36199a2fe3  aad0e4f39a8b137e  b04f0e1a637a4d85  b15e478a93e0663f  b7b2afed0c8924eb  ba0cd70664cdd496  c8af2bca40c2c2d1  c9a2eca8c36349ab  cda1eef2f3527fb1  d2845c6b60757d38  d4bc2a8808ca25dd  da39a3ee5e6b4b0d  dc2f7e403dd55359  e0298f0ca5b5f9dd  e19dec8f54bcbddf  e5526c0cd26da18c  f2353382bb308504  f8f694a84a19c54b
apps/engine/src/: config.py  db.py  logging_config.py  telemetry.py
apps/engine/src/api/: limiter.py  main.py  middleware.py
apps/engine/src/backtest/: engine.py
apps/engine/src/broker/: alpaca_broker_api.py
apps/engine/src/clients/: circuit_breaker.py  http.py
apps/engine/src/data/: polygon_client.py
apps/engine/src/execution/: __init__.py  alpaca_broker.py  broker_interface.py  order_store.py  paper_broker.py
apps/engine/src/metrics/: __init__.py  collector.py
apps/engine/src/middleware/: metrics.py  rate_limit.py  security_headers.py  tracing.py
apps/engine/src/risk/: portfolio_optimizer.py  position_sizer.py  risk_manager.py
apps/engine/src/sentinel_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/engine/src/services/: order_reconciliation.py  order_service.py  portfolio_reconciliation.py  signal_service.py
apps/engine/src/strategies/: base.py  composite.py  constants.py  indicators.py  mean_reversion.py  momentum.py  pairs_trading.py  registry.py  signal_generator.py  trend_following.py  value.py
apps/engine/src/utils/: circuit_breaker.py
apps/engine/tests/: conftest.py
apps/engine/tests/integration/: conftest.py  test_data_integration.py  test_health_integration.py  test_strategies_integration.py
apps/engine/tests/unit/: test_alpaca_broker.py  test_alpaca_broker_api.py  test_api_key_middleware.py  test_backtest.py  test_backtest_routes.py  test_circuit_breaker.py  test_config.py  test_data_routes.py  test_error_handler.py  test_health.py  test_indicators.py  test_ingestion.py  test_live_execution_gate.py  (+20 more)
(+936 files in other folders)
