[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-engine"
version = "0.1.0"
description = "Sentinel Trading Platform - Quant Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "gunicorn>=24",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.28",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1",
    "postgrest>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.151.13",
    "respx>=0.22",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # ambiguous unicode in strings (intentional: × in formulas)
    "RUF003",  # ambiguous unicode in comments
    "RUF012",  # mutable class-level defaults (standard pattern in strategy configs)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "RUF059"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
